--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
+    "@types/node-cron": "^3.0.11",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
