--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@types/ioredis": "^4.28.10",
     "@vercel/blob": "^0.27.2",
     "apify-client": "^2.12.0",
+    "axios": "^1.8.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "googleapis": "^146.0.0",
     "ioredis": "^5.5.0",
     "node-cron": "^3.0.3",
     "openai": "^4.85.4",
+    "youtube-transcript": "^1.2.1",
     "zod": "^3.24.2"
   }
 }
