--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/ioredis": "^4.28.10",
     "@vercel/blob": "^0.27.2",
     "apify-client": "^2.12.0",
